# ssr

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
cli/: Cargo.toml  README.md
cli/src/: compliance_demo.rs  haircut_matrix_demo.rs  main.rs  scenario.rs
crates/ssr-types/: Cargo.toml
crates/ssr-types/src/: lib.rs
docs/: composition-wrapper-pattern.md  spc-integration.md  spc-vs-ssr.md
programs/ssr-compliance/: Cargo.toml
programs/ssr-compliance/src/: lib.rs
programs/ssr-compliance/tests/: e2e_token.rs  smoke.rs
programs/ssr-dvp-wrapper/: Cargo.toml
programs/ssr-dvp-wrapper/src/: lib.rs
programs/ssr-dvp-wrapper/tests/: e2e_dvp.rs
programs/ssr-lending/: Cargo.toml
programs/ssr-lending/src/: lib.rs
programs/ssr-lending/tests/: e2e_lending.rs
programs/ssr-repo/: Cargo.toml
programs/ssr-repo/src/: lib.rs
programs/ssr-repo/tests/: e2e_repo.rs
programs/ssr-vault/: Cargo.toml
programs/ssr-vault/src/: lib.rs
programs/ssr-vault/tests/: e2e_vault.rs
scenarios/: compliance-gate-demo.json  cross-margin-view.json  dvp-happy-path.json  dvp-suspension-reject.json  haircut-matrix-demo.json
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: demo_walk.rs
