[package]
name         = "ssr-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[[bin]]
name = "ssr-cli"
path = "src/main.rs"

[dependencies]
# SSR
ssr-types        = { workspace = true }
ssr-compliance   = { path = "../programs/ssr-compliance" }
ssr-dvp-wrapper  = { path = "../programs/ssr-dvp-wrapper" }
ssr-vault        = { path = "../programs/ssr-vault" }
ssr-repo         = { path = "../programs/ssr-repo" }
ssr-lending      = { path = "../programs/ssr-lending" }

# CLI plumbing
clap             = { version = "4.5", features = ["derive", "env"] }
anyhow           = "1"
serde            = { version = "1", features = ["derive"] }
serde_yaml       = "0.9"
serde_json       = "1"
shellexpand      = "3"
bytemuck         = { workspace = true }

# Solana ecosystem (v3 — must align with our test deps to stay in
# the same Address vs Pubkey camp as ssr-dvp-wrapper's E2E tests).
solana-address           = "2.6"
solana-instruction       = "3"
solana-keypair           = "3"
solana-message           = "3"
solana-signer            = "3"
solana-system-interface  = "3"
solana-transaction       = "3"
solana-rpc-client        = "3"
solana-client            = "3"
solana-commitment-config = "3"
