[package]
name         = "ssr-types"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
