[package]
name         = "ssr-lending"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
publish      = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dev-dependencies]
litesvm                      = "0.9.1"
solana-instruction           = "3"
solana-keypair               = "3"
solana-signer                = "3"
solana-address               = "2.6"
solana-transaction           = "3"
solana-message               = "3"
solana-system-interface      = "3"
solana-rent                  = "2"
solana-program-pack          = "3"
spl-token-2022               = "10"
ssr-compliance               = { path = "../ssr-compliance" }
# Same constraint as ssr-repo: ssr-vault is NOT a dep. We mirror the
# lock/unlock discriminator bytes and pin them with a drift-check test.

[dependencies]
ssr-types         = { workspace = true }
# Same reason as ssr-repo for not depending on ssr-vault as a Rust
# crate (duplicate allocator/panic-handler link error in BPF). The two
# discriminator bytes are duplicated here and drift-checked at test
# time.
pinocchio         = { workspace = true }
pinocchio-pubkey  = { workspace = true }
pinocchio-system  = { workspace = true }
bytemuck          = { workspace = true }
